# friends_wall

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
DEV/: PLAN.md  TODO.md
DEV/app/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
DEV/app/convex/: dashboard.ts  devices.ts  lib.ts  pairing.ts  schema.ts  script.ts  wallpapers.ts
DEV/app/src/: App.tsx  index.css  main.tsx  types.ts
DEV/app/src-tauri/: tauri.conf.json
DEV/app/src/lib/: convexApi.ts  storage.ts
DEV/script/: README.md  package-lock.json  package.json  set-wallpaper.sh  wallpaper-listener.mjs
convex/: app.ts  devices.ts  lib.ts  pairing.ts  presence.ts  schema.ts  wallpapers.ts
convex/_generated/: api.d.ts
shared/: runtime.test.ts  runtime.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: device.ts  native.ts  types.ts
