[package]
name = "friends_wall"
version = "0.1.0"
description = "Friends Wall macOS shell"
authors = ["Codex"]
edition = "2021"

[lib]
name = "friends_wall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6" }

[dependencies]
reqwest = { version = "=0.12.15", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "=2.10.3" }
thiserror = "=2.0.12"
